--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mobile-wallet-protocol/client": "^0.0.1",
     "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-navigation/native": "^6.0.2",
+    "@tanstack/react-query": "^5.51.23",
     "expo": "~51.0.26",
     "expo-constants": "~16.0.2",
     "expo-crypto": "^13.0.2",
