--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.10",
     "@shopify/flash-list": "1.6.4",
-    "expo-dev-client": "~4.0.22"
+    "expo-dev-client": "~4.0.22",
+    "expo-image": "~1.12.13"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
