--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-navigation/native": "^6.0.2",
     "@shopify/flash-list": "1.6.4",
     "@tanstack/react-query": "^5.51.23",
+    "ethers": "^6.13.2",
     "expo": "~51.0.26",
     "expo-constants": "~16.0.2",
     "expo-crypto": "^13.0.2",
