--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
-    "@mobile-wallet-protocol/client": "^0.0.1",
+    "@mobile-wallet-protocol/client": "^0.0.2",
+    "@mobile-wallet-protocol/wagmi-connectors": "^1.0.0",
     "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-navigation/native": "^6.0.2",
     "@shopify/flash-list": "1.6.4",
@@ -44,7 +45,9 @@
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-url-polyfill": "^2.0.0",
-    "react-native-web": "~0.19.10"
+    "react-native-web": "~0.19.10",
+    "viem": "^2.19.6",
+    "wagmi": "^2.12.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
