--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
+    "fast-text-encoding": "^1.0.6",
+    "fastestsmallesttextencoderdecoder-encodeinto": "^1.0.22",
     "jotai": "^2.9.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -46,6 +48,7 @@
     "react-native-screens": "3.31.1",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.10",
+    "text-decoding": "^1.0.0",
     "viem": "^2.19.6",
     "wagmi": "^2.12.5"
   },
