--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cb-bet",
-  "main": "expo-router/entry",
+  "main": "entrypoint.js",
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
@@ -15,6 +15,7 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@ethersproject/shims": "^5.7.0",
     "@expo/vector-icons": "^14.0.2",
     "@mobile-wallet-protocol/client": "^0.0.2",
     "@mobile-wallet-protocol/wagmi-connectors": "^1.0.0",
@@ -43,6 +44,7 @@
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-get-random-values": "^1.11.0",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
