--- a/package.json
+++ b/package.json
@@ -52,7 +52,9 @@
     "react-native-web": "~0.19.10",
     "text-decoding": "^1.0.0",
     "viem": "^2.19.6",
-    "wagmi": "^2.12.5"
+    "wagmi": "^2.12.5",
+    "expo-haptics": "~13.0.1",
+    "react-native-svg": "15.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
