--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@ethersproject/shims": "^5.7.0",
     "@expo/vector-icons": "^14.0.2",
+    "@gorhom/bottom-sheet": "^4.6.4",
     "@mobile-wallet-protocol/client": "^0.0.2",
     "@mobile-wallet-protocol/wagmi-connectors": "^1.0.0",
     "@react-native-async-storage/async-storage": "^1.24.0",
@@ -25,10 +26,12 @@
     "@tanstack/react-query": "^5.51.23",
     "ethers": "^6.13.2",
     "expo": "~51.0.26",
+    "expo-clipboard": "~6.0.3",
     "expo-constants": "~16.0.2",
     "expo-crypto": "^13.0.2",
     "expo-dev-client": "~4.0.22",
     "expo-font": "~12.0.9",
+    "expo-haptics": "~13.0.1",
     "expo-image": "~1.12.13",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.21",
@@ -48,14 +51,12 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
+    "react-native-svg": "15.2.0",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.10",
     "text-decoding": "^1.0.0",
     "viem": "^2.19.6",
-    "wagmi": "^2.12.5",
-    "expo-haptics": "~13.0.1",
-    "react-native-svg": "15.2.0",
-    "expo-clipboard": "~6.0.3"
+    "wagmi": "^2.12.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
