Pushing to get cleaen, but still not working

--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
     "@mobile-wallet-protocol/client": "^0.0.2",
     "@mobile-wallet-protocol/wagmi-connectors": "^1.0.0",
     "@react-native-async-storage/async-storage": "^1.24.0",
-    "@react-navigation/native": "^6.0.2",
+    "@react-navigation/native": "^6.1.18",
     "@shopify/flash-list": "1.6.4",
     "@tanstack/react-query": "^5.51.23",
+    "@th3rdwave/react-navigation-bottom-sheet": "^0.3.2",
     "ethers": "^6.13.2",
     "expo": "~51.0.26",
     "expo-clipboard": "~6.0.3",
