--- a/app.json
+++ b/app.json
@@ -19,7 +19,7 @@
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
+        "backgroundColor": "#1A88F8"
       },
       "package": "com.jbreite.cbbet"
     },
