--- a/package.json
+++ b/package.json
@@ -20,22 +20,22 @@
     "@gorhom/bottom-sheet": "^4.6.4",
     "@mobile-wallet-protocol/client": "^0.0.2",
     "@mobile-wallet-protocol/wagmi-connectors": "^1.0.0",
-    "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/native": "^6.1.18",
     "@shopify/flash-list": "1.6.4",
     "@tanstack/react-query": "^5.51.23",
     "@th3rdwave/react-navigation-bottom-sheet": "^0.3.2",
     "ethers": "^6.13.2",
-    "expo": "~51.0.26",
+    "expo": "~51.0.28",
     "expo-clipboard": "~6.0.3",
     "expo-constants": "~16.0.2",
     "expo-crypto": "^13.0.2",
-    "expo-dev-client": "~4.0.22",
+    "expo-dev-client": "~4.0.24",
     "expo-font": "~12.0.9",
     "expo-haptics": "~13.0.1",
-    "expo-image": "~1.12.13",
+    "expo-image": "~1.12.14",
     "expo-linking": "~6.3.1",
-    "expo-router": "~3.5.21",
+    "expo-router": "~3.5.23",
     "expo-splash-screen": "~0.27.5",
     "expo-standard-web-crypto": "^1.8.1",
     "expo-status-bar": "~1.12.1",
@@ -63,7 +63,7 @@
     "@types/react": "~18.2.45",
     "@types/react-test-renderer": "^18.0.7",
     "jest": "^29.2.1",
-    "jest-expo": "~51.0.3",
+    "jest-expo": "~51.0.4",
     "react-test-renderer": "18.2.0",
     "typescript": "~5.3.3"
   },
