--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@shopify/flash-list": "1.6.4",
     "@tanstack/react-query": "^5.51.23",
     "@th3rdwave/react-navigation-bottom-sheet": "^0.3.2",
+    "date-fns": "^3.6.0",
     "ethers": "^6.13.2",
     "expo": "~51.0.28",
     "expo-clipboard": "~6.0.3",
