Parlay support for everything except 413 error

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,8 @@
   "include": [
     "**/*.ts",
     "**/*.tsx",
+    "utils/overtime/abi/SportsAmmV2.js",
     ".expo/types/**/*.ts",
     "expo-env.d.ts"
-, "utils/overtime/abi/SportsAmmV2.js"  ]
+  ]
 }
