--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "expo": {
     "name": "bsquared",
     "slug": "cb-bet",
-    "version": "1.0.1",
+    "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/backupBookIcon.png",
     "scheme": "comjbreitecbbet",
@@ -13,8 +13,11 @@
       "backgroundColor": "#1A88F8"
     },
     "ios": {
-      "associatedDomains": ["applinks:bsquared.world"],
-      "bundleIdentifier": "com.jbreite.cbbet"
+      "associatedDomains": [
+        "applinks:bsquared.world"
+      ],
+      "bundleIdentifier": "com.jbreite.cbbet",
+      "buildNumber": "3"
     },
     "android": {
       "adaptiveIcon": {
@@ -33,7 +36,10 @@
               "pathPrefix": "/"
             }
           ],
-          "category": ["BROWSABLE", "DEFAULT"]
+          "category": [
+            "BROWSABLE",
+            "DEFAULT"
+          ]
         }
       ]
     },
@@ -42,7 +48,9 @@
       "output": "static",
       "favicon": "./assets/images/favicon.png"
     },
-    "plugins": ["expo-router"],
+    "plugins": [
+      "expo-router"
+    ],
     "experiments": {
       "typedRoutes": true
     },
