--- a/package.json
+++ b/package.json
@@ -28,14 +28,18 @@
     "date-fns": "^3.6.0",
     "ethers": "^6.13.2",
     "expo": "~51.0.28",
+    "expo-application": "~5.9.1",
     "expo-clipboard": "~6.0.3",
     "expo-constants": "~16.0.2",
     "expo-crypto": "^13.0.2",
     "expo-dev-client": "~4.0.24",
+    "expo-device": "~6.0.2",
+    "expo-file-system": "~17.0.1",
     "expo-font": "~12.0.9",
     "expo-haptics": "~13.0.1",
     "expo-image": "~1.12.14",
     "expo-linking": "~6.3.1",
+    "expo-localization": "~15.0.3",
     "expo-router": "~3.5.23",
     "expo-splash-screen": "~0.27.5",
     "expo-standard-web-crypto": "^1.8.1",
@@ -44,6 +48,7 @@
     "expo-web-browser": "~13.0.3",
     "fast-text-encoding": "^1.0.6",
     "jotai": "^2.9.3",
+    "posthog-react-native": "^3.1.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
