--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/native": "^6.1.18",
     "@shopify/flash-list": "1.6.4",
+    "@supabase/supabase-js": "^2.45.3",
     "@tanstack/react-query": "^5.51.23",
     "@th3rdwave/react-navigation-bottom-sheet": "^0.3.2",
     "date-fns": "^3.6.0",
