--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
   ],
   "deno.lint": true,
   "deno.unstable": true,
+  "deno.importMap": "./supabase/functions/import_map.json",
   "[typescript]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   }
