--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@supabase/supabase-js": "^2.45.3",
     "@tanstack/react-query": "^5.51.23",
     "@th3rdwave/react-navigation-bottom-sheet": "^0.3.2",
+    "burnt": "^0.12.2",
     "date-fns": "^3.6.0",
     "ethers": "^6.13.2",
     "expo": "~51.0.28",
