--- a/package.json
+++ b/package.json
@@ -55,9 +55,10 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-animated-rolling-numbers": "^1.0.1",
     "react-native-gesture-handler": "^2.19.0",
     "react-native-get-random-values": "^1.11.0",
-    "react-native-reanimated": "~3.10.1",
+    "react-native-reanimated": "~3.15.2",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-svg": "15.2.0",
@@ -65,6 +66,9 @@
     "react-native-web": "~0.19.10",
     "viem": "^2.21.2",
     "wagmi": "^2.12.5"
+  },
+  "overrides": {
+    "react-native-reanimated": "~3.15.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
