--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "react-native": "0.74.5",
     "react-native-gesture-handler": "^2.19.0",
     "react-native-get-random-values": "^1.11.0",
-    "react-native-reanimated": "~3.10.1",
+    "react-native-reanimated": "^3.15.2",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-svg": "15.2.0",
