--- a/app.json
+++ b/app.json
@@ -41,7 +41,8 @@
             "DEFAULT"
           ]
         }
-      ]
+      ],
+      "versionCode": 2
     },
     "web": {
       "bundler": "metro",
